<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="30dp"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageButton
                android:id="@+id/imgBtnComp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/todo"
                android:scaleType="centerInside"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_one"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <ImageButton
                android:id="@+id/imgBtnYou"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/todo"
                android:scaleType="centerInside"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_two"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtOdds"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/comp_odds"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtEven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/you_even"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewresult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/choose_one_or_two_fingers"
            android:textAlignment="center"
            android:textSize="40sp" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnOne"
                style="@style/customButtonstyle"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue"
                android:text="@string/one_finger" />

            <Button
                android:id="@+id/btnTwo"
                style="@style/customButtonstyle"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:text="@string/two_finger"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>